123/MyProject/src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <label>ADD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competer_Type__c</fullName>
        <label>Competer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>LoanAmount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_NO__c</fullName>
        <label>Phone NO</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <label>Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kumar_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>kumar Lookup</label>
        <referenceTo>kumar__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>